Fix weird table shifting

--- a/styles.css
+++ b/styles.css
@@ -49,11 +49,12 @@ body {
 }
 
 .left {
-  width: 20%;
+  width: 18%;
 }
 
 .right {
-  width: 25%
+  padding-left: 10px;
+  width: 25%;
 }
 
 .middle {
@@ -75,13 +76,14 @@ body {
   content: "";
   display: table;
   clear: both;
+  padding: 20px;
 }
 
 /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
 /*
 @media screen and (max-width: 600px) {
   .column.left, .column.middle, .column.right {
-    width: 95%%;
+    width: 95%;
   }
 }
 */
@@ -172,4 +174,5 @@ span{
   bottom: 0;
   width: 100%;
   height: 2.5rem;            /* Footer height */
+  align-items: center
 }
